# brewery-etl-pipeline

./: .gitignore  README.md  main.py  pyproject.toml
src/: analytics.py  api.py  extract.py  load.py  transform.py  visualize.py
src/src/: extract.py
src/src/data/landing_zone/: raw_breweries.meta.json
tests/: test_phone.py
