[project]
name = "brewery-etl-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "seaborn>=0.13.2",
]
